# 2025-Project

./: CMakeLists.txt  README.md  TimerWidget.cpp  TimerWidget.h  achievementboard.cpp  clickablelabel.cpp  clickablelabel.h  englishoverlay.h  historywindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pkuqtproject2025.pro  resources.qrc  taskitemWidget.cpp  taskrecord.cpp  taskrecord.h  timetable.cpp  timetable.ui  video  welcomepage.h
Esther-part/: CMakeLists.txt  FormDialog.cpp  FormDialog.h  TimerWidget.cpp  achievementboard.cpp  achievementboard.h  achievementboard.ui  clickablelabel.cpp  clickablelabel.h  englishoverlay.cpp  englishoverlay.h  englishoverlay.ui  graph.cpp  graph.h  graph.ui  historywindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  profile.ui  programmingoverlay.cpp  programmingoverlay.h  programmingoverlay.ui  quote.txt  resources.qrc  taskitemWidget.cpp  taskitemWidget.h  taskrecord.cpp  taskrecord.h  timetable.h  welcomepage.cpp
Esther-part/wenyi-part/: timetable.cpp
Final Code/: TimerWidget.cpp  TimerWidget.h  clickablelabel.h  englishoverlay.cpp  historywindow.h  mainwindow.h  profile.cpp  taskrecord.cpp  timetable.cpp  timetable.ui  welcomepage.cpp  welcomepage.ui
Widget-branch/: AlarmDialog.h
legacy/: AlarmDialog.cpp  TimerWidget.cpp
wenyi-part/: resource.qrc  timetable.cpp  timetable.h  timetable.ui
